sandbox-codebase/objects/heymarket__Log__e/heymarket__Log__e.object-meta.xml
<CustomObject>
    <description>Logs</description>
    <label>Log</label>
    <pluralLabel>Logs</pluralLabel>
</CustomObject>