sandbox-codebase/objects/heymarket__Log__e/fields/heymarket__Data__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Data__c</fullName>
    <label>Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>