sandbox-codebase/objects/heymarket__Log__e/fields/heymarket__Job__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Job__c</fullName>
    <description>Job__c.Id</description>
    <label>Job</label>
    <length>18</length>
    <type>Text</type>
</CustomField>