sandbox-codebase/objects/heymarket__Log__e/fields/heymarket__Type__c.field-meta.xml
<CustomField>
    <fullName>heymarket__Type__c</fullName>
    <label>Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>